--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = megaatmega2560
+default_envs = LPC1768
 
 [common]
 default_src_filter = +<src/*> -<src/config> -<src/HAL> +<src/HAL/shared>
@@ -219,6 +219,7 @@ build_flags       = -DU8G_HAL_LINKS -IMarlin/src/HAL/HAL_LPC1768/include -IMarli
 lib_ldf_mode      = off
 lib_compat_mode   = strict
 extra_scripts     = Marlin/src/HAL/HAL_LPC1768/upload_extra_script.py
+upload_port       = upload_disk
 src_filter        = ${common.default_src_filter} +<src/HAL/HAL_LPC1768>
 lib_deps          = Servo
   LiquidCrystal
